welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: Boolean does not take parameters
  } else ((!vacation)&&(day<=1)){
                                ^