welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if ((vacation)&&(day>=1)&&(day<=5)){
    return "10:00"
  } else if ((vacation)&&(day<=1)){
    return "off"
  } else if ((!vacation)&&(day>=1)&&(day<=5)){
    return "7:00"
  } else ((!vacation)&&(day<=1)){
    return "10:00"
  }
}